--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="author" content="">
         <title>Restaurant Roulette!</title>
+        <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
@@ -11,7 +12,7 @@
 		<p class="message"></p>
 
 		<p class="filters">Current Location:
-			<input type="text" name="clocation"><br>	
+			<input type="text" name="clocation" class="location"><br>	
 		</p>
 
 		<p class="filters">Maximum distance away (miles):
@@ -41,7 +42,12 @@
 			step="1">
 		</p>
 
-		<button type="button" class="">Spin!</button>
+		<button type="button" class="spin">Spin!</button>
 
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+        <script src="js/google-places-manager.js"></script>
+        <script src="js/queryparams.js"></script>
 	</body>
 </html>
