--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
 
 		<button type="button" class="spin">Spin!</button>
 
+		<div class="map-container"><p>hello</p></div>
+
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-        <script src="js/query-params.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY55ORyqjG8LaN8_h3KIUQ6QR7WbmRz4A&amp;sensor=true&amp;libraries=places"></script>
+		<script src="js/query-params.js"></script>
 		<script src="js/google-places-manager.js"></script>
 	</body>
 </html>
