got rid of test 'hello' text-placeholder for map

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 		<button type="button" class="spin">Spin!</button>
 
-		<div class="map-container"><p>hello</p></div>
+		<div class="map-container"><p></p></div>
 
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
