--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 
 		<button type="button" class="spin">Spin!</button>
 
-		<div class="map-container"><p></p></div>
+		<div class="map-container"></div>
+		
+		<ul class="restaurants">
+			<li class="restaurant template"></li>
+		</ul>
 
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -52,5 +56,6 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY55ORyqjG8LaN8_h3KIUQ6QR7WbmRz4A&amp;sensor=true&amp;libraries=places"></script>
 		<script src="js/query-params.js"></script>
 		<script src="js/google-places-manager.js"></script>
+		<script src="js/render-restaurants.js"></script>
 	</body>
 </html>
