--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 		</p>	
 
 		<p class="filters">Price Range:
-			<input type="number" class="minprice" value="1" min="1" max="4"
-			step="1">
+			<input class="form-radios" type="radio" value="price1"> $
+			<input class="form-radios" type="radio" value="price2"> $$
+			<input class="form-radios" type="radio" value="price3"> $$$
+			<input class="form-radios" type="radio" value="price4"> $$$$ 
 		</p>
 
 		<button type="button" class="spin">Spin!</button>
