--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 		<button type="button" class="spin">Spin!</button>
 
 		<div class="map-container"></div>
+
+		<ul class="randres">
+			<li class="name"></li>
+			<li class="address"></li>
+			<li class="phone"></li>
+			<li class="rating"></li>
+			<li class="review"></li>
+		</ul>
 		
 		<ul class="restaurants">
 			<li class="restaurant template"></li>
