--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
 		</p>	
 
 		<p class="filters">Price Range:		
-			<div class="btn-group">
-				<button type="button" class="btn btn-default">$</button>
-				<button type="button" class="btn btn-default">$$</button>
-				<button type="button" class="btn btn-default">$$$</button>
-				<button type="button" class="btn btn-default">$$$$</button>
-			</div>
+			<input type="checkbox" name="" value=""> $
+			<input type="checkbox" name="" value=""> $$
+			<input type="checkbox" name="" value=""> $$$
+			<input type="checkbox" name="" value=""> $$$$
 		</p>
 
 		<button type="button" class="btn btn-primary spin">Spin!</button>
