fixed openNow and maxPriceLevel

--- a/index.html
+++ b/index.html
@@ -25,21 +25,14 @@
 						<!--<button  class="refresh-button">Refresh</button> !-->
 					</p>
 					
-					<p class="filters">Rank by:
-						<select name="categories" class="rankby">
-							<option value="select">Select One</option>
-							<option value="distance">Lowest Distance</option>
-							<option value="price">Lowest Expense</option>
-							<option value="rating">Best Rated</option>
+					<p class="filters">Max Price:
+						<select name="categories" class="max-price">
+							<option value="1">$</option>
+							<option value="2">$$</option>
+							<option value="3">$$$</option>
+							<option value="4">$$$$</option>
 						</select>
 					</p>	
-
-					<p class="filters">Price Range:		
-						<input type="checkbox" name="" value=""> $
-						<input type="checkbox" name="" value=""> $$
-						<input type="checkbox" name="" value=""> $$$
-						<input type="checkbox" name="" value=""> $$$$
-					</p>
 
 					<button type="button" class="btn btn-primary spin">Spin!</button>
 					<ul class="randres">
